# ai_assistant

./: LICENSE  README.md
backend/: compose.yml  pyproject.toml
backend/alembic/: env.py
backend/kyc/: .dockerignore  Dockerfile  main.py
backend/kyc/config/: config.yaml  settings.py
backend/kyc/core/: database.py  dependencies.py  email.py  rate_limit.py  security.py
backend/kyc/models/: __init__.py  user.py  user_address.py  user_profile.py
backend/kyc/routers/: auth_router.py  system_router.py  users_router.py
backend/kyc/schemas/: token.py  user.py  user_address.py  user_profile.py
backend/kyc/services/: auth_service.py
