[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "fastapi>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.50.0",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
]
